# qb-agent-system

./: .gitignore  .last-sync.json  EVAL-SYSTEM-PLAN.md  README.md
agents/: ARCH.agent.md  (+15 more)
evals/: README.md  config.yaml  pipelines.yaml  pyproject.toml
evals/baselines/IMP-0001/: 20260429-003207-db4d0b6-baseline.json  20260429-003317-f0df6b5-post.json  20260429-013654-9c19033-post.json  20260429-014659-3c54cb4-post.json  20260429-015227-3c54cb4-post.json
evals/baselines/IMP-0002/: 20260603-141132-f051c67-baseline.json  20260603-141201-f051c67-post.json
evals/baselines/IMP-0003/: 20260603-141212-f051c67-baseline.json  (+1 more)
evals/evaluators/: __init__.py  behavioral.py  calibration.py  execution_metrics.py  foundry_agents.py  foundry_client.py  model_eval.py  quality.py  recommender.py  routing.py  rubric.py  structure.py  tool_loop.py
evals/evidence/: README.md  _schema.json
evals/results/: qb-pre-imp0004.md  recommendations-qb-20260424-181037.md  recommendations-qb-20260424-181050.md  recommendations-qb-20260424-192201.md  recommendations-qb-20260424-192817.md  recommendations-qb-20260424-192914.md  recommendations-qb-20260424-195902.md
evals/runner/: cli.py  composite.py  imp_runner.py  reporter.py  telemetry.py
evals/schemas/: artifact-by-reference-contract.md  brief.schema.json  design-preview.schema.json  qa-baseline.schema.json  qb-result.schema.json  run-state.schema.json  tracks-block.schema.json
evals/scripts/: diff_qb_qb2.py  run_imp_0004.py  summarize_behavioral.py  summarize_qb2.py  summarize_routing.py  summarize_routing2.py  test_with_tools.py
(+332 files in other folders)
