[project]
name = "agent-evals"
version = "0.1.0"
description = "Evaluation harness for Copilot CLI agents"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
foundry = [
    "azure-ai-evaluation>=1.0",
    "azure-identity>=1.15",
]

[project.scripts]
agent-evals = "runner.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["runner*", "evaluators*"]
exclude = ["baselines*", "datasets*", "reports*", "results*", "scripts*"]
